force-app/main/default/objects/Sample_Display__c/Sample_Display__c.object-meta.xml
<CustomObject>
    <label>Sample Display</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Sample Display Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Display</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>