force-app/main/default/objects/Sample_Display__c/fields/Channel_Text__c.field-meta.xml
<CustomField>
    <fullName>Channel_Text__c</fullName>
    <label>Channel Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>