force-app/main/default/objects/Sample_Display__c/fields/Count_PO__c.field-meta.xml
<CustomField>
    <fullName>Count_PO__c</fullName>
    <label>*Count PO</label>
    <summaryForeignKey>PO__c.Sample_Display__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>