force-app/main/default/objects/Sample_Display__c/fields/First_Submit__c.field-meta.xml
<CustomField>
    <fullName>First_Submit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>第一次审批</description>
    <label>First Submit</label>
    <type>Checkbox</type>
</CustomField>