force-app/main/default/objects/Sample_Display__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <label>Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample Task</fullName>
                <default>true</default>
                <label>Sample Task</label>
            </value>
            <value>
                <fullName>Split Task</fullName>
            </value>
            <value>
                <fullName>Retail Manager Approve</fullName>
            </value>
            <value>
                <fullName>Upload PO&amp;Product Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>