force-app/main/default/objects/Sample_Display__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <formula>TEXT(  Product_Model__r.Product__c  )</formula>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>