force-app/main/default/objects/Sample_Display__c/fields/Ratio_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Ratio_of_Completion__c</fullName>
    <formula>Sum_Sample_Display_Confirm_Number__c / Number__c</formula>
    <label>Ratio of Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>