force-app/main/default/objects/Sample_Display__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <defaultValue>IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Thailand&apos;) , &apos;Hisense Thailand&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Indonesia&apos;) , &apos;Hisense Indonesia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Vietnam&apos;) , &apos;Hisense Vietnam&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Malaysia&apos;) , &apos;	Hisense Malaysia&apos;,
IF(ISPICKVAL($User.Sales_Region__c, &apos;Hisense Philippines&apos;) , &apos;Hisense Philippines&apos;,&apos;&apos;)
))))</defaultValue>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Region</valueSetName>
    </valueSet>
</CustomField>