force-app/main/default/objects/Sample_Display__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Sample Display</relationshipLabel>
    <relationshipName>Sample_Display</relationshipName>
    <type>Lookup</type>
</CustomField>