force-app/main/default/objects/Sample_Display__c/fields/Sum_Customer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Sum_Customer_Detail__c</fullName>
    <label>*Sum Customer Detail</label>
    <summaryForeignKey>Sample_Display_Customer_Confirm__c.Sample_Display__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>