force-app/main/default/objects/Sample_Display__c/fields/Sum_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Sum_PO_Number__c</fullName>
    <label>*Sum PO Number</label>
    <summarizedField>PO__c.Number__c</summarizedField>
    <summaryForeignKey>PO__c.Sample_Display__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>