force-app/main/default/objects/Sample_Display__c/fields/Sum_Store_Details_Number__c.field-meta.xml
<CustomField>
    <fullName>Sum_Store_Details_Number__c</fullName>
    <description>拆分的store details数量和</description>
    <label>*Sum Store Details Number</label>
    <summarizedField>Store_Detail__c.Number__c</summarizedField>
    <summaryForeignKey>Store_Detail__c.Sample_Display__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>