force-app/main/default/objects/Sample_Display__c/fields/Task_Level__c.field-meta.xml
<CustomField>
    <fullName>Task_Level__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Task Level</label>
    <type>Text</type>
</CustomField>