force-app/main/default/objects/Sample_Display__c/recordTypes/Channel.recordType-meta.xml
<RecordType>
    <fullName>Channel</fullName>
    <active>true</active>
    <label>Customer</label>
</RecordType>