force-app/main/default/objects/Sample_Display__c/recordTypes/Store.recordType-meta.xml
<RecordType>
    <fullName>Store</fullName>
    <active>true</active>
    <label>Store</label>
</RecordType>