force-app/main/default/objects/Sample_Display__c/validationRules/ChannelRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ChannelRule</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &apos;Channel&apos; &amp;&amp; ISBLANK(   Customer__c )</errorConditionFormula>
    <errorDisplayField>Channel_Text__c</errorDisplayField>
    <errorMessage>Channel is required</errorMessage>
</ValidationRule>