force-app/main/default/objects/Sample_Display__c/validationRules/Number_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>MFLOOR(Number__c ) &lt;&gt; Number__c   || 
Number__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Number__c</errorDisplayField>
    <errorMessage>The number is a positive integer</errorMessage>
</ValidationRule>