force-app/main/default/objects/Sample_Display__c/validationRules/StoreRule.validationRule-meta.xml
<ValidationRule>
    <fullName>StoreRule</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &apos;Store&apos; &amp;&amp; ISBLANK(  Store__c )</errorConditionFormula>
    <errorDisplayField>Store__c</errorDisplayField>
    <errorMessage>Store is required</errorMessage>
</ValidationRule>