force-app/main/default/objects/Sample_Display__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task_Level__c</columns>
    <columns>Product_Model__c</columns>
    <columns>Channel_Text__c</columns>
    <columns>Store__c</columns>
    <columns>Number__c</columns>
    <columns>Deadline__c</columns>
    <columns>Ratio_of_Completion__c</columns>
    <columns>Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>